    using the "newt" frontend. This forces the framebuffer to VESA and will
    thereby solve problems reported on various HP notebooks with the vga16fb
    driver. It also increases the screen size and thus allows more information
    to be displayed. Closes: #471505.
  * [s390] Add localechooser to initrd for generic target (see #316006).

  [ Joey Hess ]
  * Remove upx from build-deps, has not been used for over a year.

 -- Frans Pop <fjp@debian.org>  Wed, 28 Oct 2009 16:10:49 +0100

debian-installer (20090123) unstable; urgency=low

  [ Frans Pop ]
  * Add build dependency on docbook-xml, needed for D-I internals.

 -- Otavio Salvador <otavio@debian.org>  Fri, 23 Jan 2009 12:38:07 -0200

debian-installer (20090122) unstable; urgency=low

  [ Martin Michlmayr ]
  * Fix off-by-one: the QNAP initrd should be padded to exactly 4 MB,
    not 4 MB - 1 byte.

  [ Otavio Salvador ]
  * Add pata-modules on cdrom images (i386 and amd64) to enable support
    for Marvell controllers and others.

  [ Frans Pop ]
  * Update minimum memory/diskspace requirements in x86 syslinux help
    screens. New values are the same as in the Installation Guide.

  [ Samuel Thibault ]
  * Add uinput-modules to cdrom, netboot and hd-media images (amd64, alpha,
    i386, ppc64, ia64 and powerpc) to improve brltty device support.

  [ Otavio Salvador ]
  * Apply patch from Jurij Smakov to add usb-storage to cdrom and netboot
    images (sparc) to allow firmware to be loaded from a usb devices.
    Closes: #505789.

  [ Frans Pop ]
  * Add option in syslinux configuration to return to graphical boot menu
    from the help screens. Based on research done by Franklin Piat.
    Closes: #505750.
  * Rename syslinux adamd*.cfg files to amdad*.cfg.
  * Rename syslinux *text.cfg files to *txt.cfg. This is needed because
    adamdtext.cfg is one character too long which means it was never actually
    included in the menu for multi-arch images.

  [ Franklin Piat ]