@@ -352,6 +352,13 @@ USE_UDEBS_FROM
   unstable for daily builds.
   Included in /etc/udebs-source in most initrds.
 
+USE_PROPOSED_UPDATES
+  Set to 1 in debian/rules to have the gen-sources.list.udeb script include
+  udebs from $USE_UDEBS_FROM-proposed-updates (for official builds of e.g.
+  stable updates). For manual builds use for example:
+     make USE_PROPOSED_UPDATES=1 all_build
+  If no valid source for proposed updates is found, the build will fail.
+
 OMIT_RELEASE_INFO
   Can be used to suppress the inclusion of the files /etc/default-release and
   /etc/udebs-source in some targets (like boot floppies).
