@@ -10,6 +10,7 @@ TRANSSTATUS=
 BOOTMENU_BEEP=n
 else
 USE_UDEBS_FROM=squeeze
+USE_PROPOSED_UPDATES=0
 TRANSSTATUS=translation-status
 BOOTMENU_BEEP=y
 endif
