@@ -132,11 +132,13 @@ debian-installer (2009xxxx) UNRELEASED; urgency=low
     driver. It also increases the screen size and thus allows more information
     to be displayed. Closes: #471505.
   * [s390] Add localechooser to initrd for generic target (see #316006).
+  * Implement clean method to include udebs from proposed-updates for builds
+    for stable and testing.
 
   [ Joey Hess ]
   * Remove upx from build-deps, has not been used for over a year.
 
- -- Frans Pop <fjp@debian.org>  Wed, 28 Oct 2009 16:10:49 +0100
+ -- Frans Pop <fjp@debian.org>  Sun, 08 Nov 2009 04:17:16 +0100
 
 debian-installer (20090123) unstable; urgency=low
 
